# DataGeneration

./: .gitattributes  README.md  pyproject.toml
data/raw/: 한국남부발전(주)_발전용어집_20230228.csv  한국서부발전(주)_발전용어집_20240823.csv  한국수력원자력(주)_원전 표준 용어집_20190905.csv  한국중부발전(주)_발전용어집_20230828.csv
models/: model.py
module/: rss.py
notebooks/Cipher/: 00_DataGenerate.ipynb  main.py
notebooks/Cipher/data/: cipher_data_parallel_version_1.json  cipher_data_parallel_version_10.json  cipher_data_parallel_version_11.json  cipher_data_parallel_version_12.json  cipher_data_parallel_version_13.json  cipher_data_parallel_version_14.json  cipher_data_parallel_version_15.json  cipher_data_parallel_version_16.json  cipher_data_parallel_version_17.json  cipher_data_parallel_version_18.json  cipher_data_parallel_version_19.json  cipher_data_parallel_version_2.json  cipher_data_parallel_version_20.json  cipher_data_parallel_version_21.json  cipher_data_parallel_version_22.json  cipher_data_parallel_version_23.json  cipher_data_parallel_version_24.json  cipher_data_parallel_version_25.json  cipher_data_parallel_version_26.json  cipher_data_parallel_version_27.json  cipher_data_parallel_version_28.json  cipher_data_parallel_version_29.json  cipher_data_parallel_version_3.json  (+76 more)
notebooks/Job/: 00_DataGenerate.ipynb
notebooks/NIDS/: 00_analysis.ipynb  01_traintest.ipynb  02_generation.ipynb  augmented_with_smote_only.csv  new_attack_type_samples.csv  test.ipynb  wsn-ds.ipynb
notebooks/powerplant/: 00_DataGenerate.ipynb  DataGenerate.ipynb  HuggingFace.ipynb
utils/: util.py
