[tool.poetry]
name = "datageneration"
version = "0.1.0"
description = ""
authors = ["ccw7463 <changwoo7463@gmail.com>"]
readme = "README.md"

# 포함할 패키지 지정
packages = [
    { include = "models", from = "." },
    { include = "data", from = "." },
    { include = "config", from = "." },
    { include = "notebooks", from = "." },
]

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.29.5"
pandas = "^2.2.3"
chardet = "^5.2.0"
huggingface-hub = "^0.26.2"
ml-collections = "^1.0.0"
langchain = "^0.3.8"
langchain-community = "^0.3.8"
transformers = "^4.46.3"
torch = "^2.5.1"
langgraph = "^0.2.53"
datasets = "^3.1.0"
ipywidgets = "^8.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
